@@ -7,8 +7,7 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Flags specifying how <see cref="T:Gnome.DateEdit" /> behaves</summary>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,7 +33,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Time will be displayed.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -46,7 +45,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>24-hour format is desired for the time display.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -58,7 +57,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The week starts on Monday</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
