@@ -7,8 +7,7 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary><see cref="T:Gnome.FontPicker" /> button mode (or what to show).</summary>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,7 +33,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Show pixmap</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -46,7 +45,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Show font info</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -58,7 +57,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Show user widget</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -70,7 +69,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>On error</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
