@@ -7,8 +7,7 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>How icons should be displayed</summary>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,7 +33,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Display only icons</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -46,7 +45,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Display text below the icons</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -58,7 +57,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Display text to the right of the icons</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
