@@ -7,8 +7,12 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>This enum gives an identifier for each menu shortcut that can possible be redefined.</summary>
+    <remarks>
+    A user can redefine the accelerator keys for each menu item (if the application supports this). 
+    If an application is not using one of these accelerators, then no shortcut redefinition is 
+    possible unless the application specifically implements it (moral: use standard menu items).
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,7 +38,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "New" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -46,7 +50,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Open" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -58,7 +62,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Save" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -70,7 +74,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Save As..." menu</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -82,7 +86,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Revert" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -94,7 +98,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Print" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -106,7 +110,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Print setup..." menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -118,7 +122,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Close" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -130,7 +134,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Quit" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -142,7 +146,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Cut" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -154,7 +158,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Copy" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -166,7 +170,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Paste" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -178,7 +182,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Clear" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -190,7 +194,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Undo" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -202,7 +206,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Redo" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -214,7 +218,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Find..." menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -226,7 +230,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "FindAgain" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -238,7 +242,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Replace..." menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -250,7 +254,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Properties..." menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -262,7 +266,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Preferences..." menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -274,7 +278,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "About..." menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -286,7 +290,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Select all" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -298,7 +302,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "New window" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -310,7 +314,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Close window" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -322,7 +326,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "New game" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -334,7 +338,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Pause game" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -346,7 +350,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Restart game" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -358,7 +362,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Undo move" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -370,7 +374,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Redo move" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -382,7 +386,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Hint" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -394,7 +398,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "Scores..." menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -406,7 +410,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The "End game" menu.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
