@@ -10,7 +10,7 @@
     <summary>These values identify the item type that a particular <see cref="T:Gnome.UIInfo" /> structure specifies.</summary>
     <remarks>
     One should be careful when using Gnome.App.Create[Custom|Interp|WithData] methods with 
-    <see cref="T:Gnome.UIInfo" /> arrays containing UI_BUILDER_DATA items, since their 
+    <see cref="T:Gnome.UIInfo" /> arrays containing BuilderData items, since their 
     <see cref="T:Gnome.UIBuilderData" /> structures completely override the ones generated or 
     supplied by the above methods.
     </remarks>
@@ -148,7 +148,7 @@
       <Parameters />
       <Docs>
         <summary>
-	Item that defines a subtree/submenu, same as GNOME_APP_UI_SUBTREE, 
+	Item that defines a subtree/submenu, same as Subtree, 
 	but the texts should be looked up in the libgnome catalog.
 	</summary>
         <remarks>To be added</remarks>
@@ -163,7 +163,7 @@
       <Parameters />
       <Docs>
         <summary> 
-	Almost like GNOME_APP_UI_SUBTREE, but inserts items into the current menu 
+	Almost like Subtree, but inserts items into the current menu 
 	or whatever, instead of making a submenu.
 	</summary>
         <remarks>To be added</remarks>
