@@ -7,8 +7,7 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>These values identify the type of pixmap used in an item.</summary>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,7 +33,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary> No pixmap specified.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -46,7 +45,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Use a stock pixmap <see cref="T:Gnome.Stock" />.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -58,7 +57,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Use a pixmap from inline xpm data.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -70,7 +69,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Use a pixmap from the specified filename.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
