@@ -1,5 +1,10 @@
 2003-08-02  Martin Willemoes Hansen <mwh@sysrq.dk>
 
+	* /en/Gnome/UIPixmapType.xml:
+	* /en/Gnome/UIInfoConfigurableTypes.xml:
+	* /en/Gnome/IconListMode.xml:
+	* /en/Gnome/FontPickerMode.xml:
+	* /en/Gnome/DateEditFlags.xml:
 	* /en/Gnome/ClientFlags.xml:
 	* /en/Gnome/DialogType.xml:
 	* /en/Gnome/EdgePosition.xml: 
